feat: image cdn support (#232)
* feat: initial image cdn handling

* chore: fix lint

* chore: format

* chore: TODO note about serverAddress

* feat: warn about invalid remote patterns

* test: add tests for remote images

* test: add tests for images endpoint and request method

* post-merge fixes

* adjust feature support matrix

* test: adjust assertions for added feature

* chore: fix lint

* test: adjust to not use .bytes(), match mocked response, not response text

* fix: use originServerAddress

* chore: remove not existign server.d.ts from package.json#files

* test: use mock logger from dev-utils

* test: add first local image test

* test: add tests for resizing

* test: test image cdn handling in vite

* chore: add jsdoc for generateImage

* chore: no need to supress n/no-unsupported-features/node-builtins

* docs: fix shield url for netlify/images

* fix: drop node 18

* chore: add images to .release-please-manifest.json

* fix: spin up server when images are enabled and there is no origin server provided

* chore: fix lint

* Update packages/images/src/main.ts

Co-authored-by: Eduardo Bouças <mail@eduardoboucas.com>

* chore: http.createServer -> HTTPServer

* fix: early bail to limit nesting

* refactor: create helper function for HTTPServer handler that serves random images

* test: use own http server for testing remote images instead of unsplash

* fix: move image matching to before function matching

* fix: handle image cdn rewrites

* fix: log error when image generation for tests fails

---------

Co-authored-by: Eduardo Bouças <mail@eduardoboucas.com>

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "packages/edge-functions",
     "packages/functions",
     "packages/headers",
+    "packages/images",
     "packages/redirects",
     "packages/runtime",
     "packages/static",
