--- a/.github/workflows/release-please.yaml
+++ b/.github/workflows/release-please.yaml
@@ -70,6 +70,10 @@ jobs:
         if: ${{ steps.release.outputs['packages/headers--release_created'] }}
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+      - run: npm publish packages/images/ --provenance --access=public
+        if: ${{ steps.release.outputs['packages/images--release_created'] }}
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
       - run: npm publish packages/redirects/ --provenance --access=public
         if: ${{ steps.release.outputs['packages/redirects--release_created'] }}
         env:
