--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -6,6 +6,7 @@
   "packages/edge-functions": "2.14.3",
   "packages/functions": "4.1.3",
   "packages/headers": "2.0.1",
+  "packages/images": "0.0.0",
   "packages/otel": "3.0.2",
   "packages/redirects": "3.0.1",
   "packages/runtime": "4.0.2",
