--- a/packages/edge-functions/package.json
+++ b/packages/edge-functions/package.json
@@ -51,6 +51,7 @@
   },
   "devDependencies": {
     "@netlify/types": "2.0.2",
+    "execa": "^9.6.0",
     "tsup": "^8.0.0",
     "vitest": "^3.0.0"
   },
