--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -22,6 +22,11 @@ jobs:
           node-version: lts/*
           cache: 'npm'
 
+      - name: Setup Deno
+        uses: denoland/setup-deno@v1
+        with:
+          deno-version: 2.2.4
+
       - name: Install dependencies
         run: npm ci --no-audit
 
