--- a/.github/workflows/publint.yaml
+++ b/.github/workflows/publint.yaml
@@ -22,6 +22,10 @@ jobs:
         with:
           node-version: lts/*
           cache: 'npm'
+      - name: Setup Deno
+        uses: denoland/setup-deno@v1
+        with:
+          deno-version: 2.2.4
       - name: Install dependencies
         run: npm ci
       - name: Build
