--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   ],
   "version": "0.0.0",
   "scripts": {
+    "dev": "node scripts/parallel.js npm run dev",
     "prepare": "husky",
     "lint": "eslint --cache",
     "lint:fix": "npm run lint -- --fix",
@@ -37,6 +38,7 @@
     "eslint": "^9.0.0",
     "eslint-config-prettier": "^10.0.0",
     "eslint-plugin-n": "17.19.0",
+    "execa": "^8.0.1",
     "husky": "^9.0.0",
     "prettier": "^3.0.0",
     "typescript-eslint": "^8.33.0"
