--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -20,5 +20,5 @@
 
     "strict": true
   },
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "packages/*/src", "packages/edge-functions/dev"]
 }
