--- a/packages/static/package.json
+++ b/packages/static/package.json
@@ -13,12 +13,12 @@
     "dist/**/*"
   ],
   "scripts": {
-    "build": "tsup-node",
+    "build": "tsdown",
     "prepack": "npm run build",
     "test": "vitest run",
     "test:dev": "vitest",
     "test:ci": "npm run build && vitest run",
-    "dev": "tsup-node --watch",
+    "dev": "tsdown --watch",
     "publint": "npx -y publint --strict"
   },
   "keywords": [],
@@ -34,7 +34,7 @@
   "devDependencies": {
     "@netlify/dev-utils": "^3.2.1",
     "@types/mime-types": "^2.1.4",
-    "tsup": "^8.5.0",
+    "tsdown": "^0.12.7",
     "vitest": "^3.1.4"
   },
   "dependencies": {
