--- a/packages/blobs/package.json
+++ b/packages/blobs/package.json
@@ -45,8 +45,8 @@
     "server.d.ts"
   ],
   "scripts": {
-    "build": "tsup-node",
-    "dev": "tsup-node --watch",
+    "build": "tsdown",
+    "dev": "tsdown --watch",
     "prepack": "npm run build",
     "test": "run-s build test:ci",
     "test:dev": "run-s build test:dev:*",
@@ -72,7 +72,7 @@
     "npm-run-all2": "^8.0.4",
     "semver": "^7.5.3",
     "tmp-promise": "^3.0.3",
-    "tsup": "^8.0.0",
+    "tsdown": "^0.12.7",
     "vitest": "^3.0.0"
   },
   "dependencies": {
