--- a/packages/otel/package.json
+++ b/packages/otel/package.json
@@ -43,8 +43,8 @@
     "dist/**/*"
   ],
   "scripts": {
-    "build": "tsup-node",
-    "dev": "tsup-node --watch",
+    "build": "tsdown",
+    "dev": "tsdown --watch",
     "prepack": "npm run build",
     "test": "run-s build test:ci",
     "test:dev": "run-s build test:dev:*",
@@ -66,7 +66,7 @@
   "author": "Netlify Inc.",
   "devDependencies": {
     "npm-run-all2": "^7.0.2",
-    "tsup": "^8.0.0",
+    "tsdown": "^0.12.7",
     "vitest": "^3.0.0"
   },
   "dependencies": {
