--- a/packages/runtime-utils/package.json
+++ b/packages/runtime-utils/package.json
@@ -13,12 +13,12 @@
     "dist/**/*"
   ],
   "scripts": {
-    "build": "tsup-node",
+    "build": "tsdown",
     "prepack": "npm run build",
     "test": "vitest run",
     "test:dev": "vitest",
     "test:ci": "npm run build && vitest run",
-    "dev": "tsup-node --watch",
+    "dev": "tsdown --watch",
     "publint": "npx -y publint --strict"
   },
   "keywords": [],
@@ -30,7 +30,7 @@
   "author": "Netlify Inc.",
   "devDependencies": {
     "@types/node": "^18.19.110",
-    "tsup": "^8.0.0",
+    "tsdown": "^0.12.7",
     "vitest": "^3.0.0"
   }
 }
