--- a/packages/vite-plugin/package.json
+++ b/packages/vite-plugin/package.json
@@ -13,12 +13,12 @@
     "dist/**/*"
   ],
   "scripts": {
-    "build": "tsup-node",
+    "build": "tsdown",
     "prepack": "npm run build",
     "test": "vitest run",
     "test:dev": "vitest",
     "test:ci": "npm run build && vitest run",
-    "dev": "tsup-node --watch",
+    "dev": "tsdown --watch",
     "publint": "npx -y publint --strict"
   },
   "keywords": [],
@@ -31,7 +31,7 @@
   "devDependencies": {
     "@types/node": "^20.17.57",
     "playwright": "^1.52.0",
-    "tsup": "^8.0.0",
+    "tsdown": "^0.12.7",
     "vite": "^6.3.4",
     "vitest": "^3.0.0"
   },
