--- a/packages/blobs/package.json
+++ b/packages/blobs/package.json
@@ -77,6 +77,7 @@
   },
   "dependencies": {
     "@netlify/dev-utils": "3.2.2",
+    "@netlify/otel": "^3.0.2",
     "@netlify/runtime-utils": "2.1.0"
   }
 }
