--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -82,6 +82,7 @@
   "dependencies": {
     "@netlify/blobs": "10.0.4",
     "@netlify/dev-utils": "3.2.2",
+    "@netlify/otel": "^3.0.2",
     "@netlify/serverless-functions-api": "2.1.3",
     "@netlify/zip-it-and-ship-it": "^12.2.0",
     "cron-parser": "^4.9.0",
