--- a/packages/vite-plugin/package.json
+++ b/packages/vite-plugin/package.json
@@ -41,8 +41,7 @@
   },
   "dependencies": {
     "@netlify/dev": "4.5.0",
-    "@netlify/dev-utils": "^4.1.0",
-    "chalk": "^5.4.1"
+    "@netlify/dev-utils": "^4.1.0"
   },
   "peerDependencies": {
     "vite": "^5 || ^6 || ^7"
