--- a/packages/blobs/package.json
+++ b/packages/blobs/package.json
@@ -77,6 +77,7 @@
   },
   "dependencies": {
     "@netlify/dev-utils": "4.1.1",
+    "@netlify/otel": "^3.1.0",
     "@netlify/runtime-utils": "2.1.0"
   }
 }
