--- a/release-please-config.json
+++ b/release-please-config.json
@@ -6,6 +6,7 @@
   "release-type": "node",
   "separate-pull-requests": false,
   "packages": {
+    "packages/ai": {},
     "packages/blobs": {},
     "packages/cache": {},
     "packages/dev": {},
