feat: add AI gateway (#450)
* feat: add ai gateway

* fix gitignore

* open api comment todo

* restructure to ai package

* fix release yaml

* fixes, feedback

* address feedback

* feedback

* make context param

* lint/format

* lock file

* start with 0.1.0

* fix bootstrap build

* use new endpoint

* Update packages/ai/src/bootstrap/main.ts

Co-authored-by: Eduardo Bouças <mail@eduardoboucas.com>

* Update packages/ai/src/bootstrap/main.ts

Co-authored-by: Eduardo Bouças <mail@eduardoboucas.com>

* Update packages/ai/src/bootstrap/main.ts

Co-authored-by: Eduardo Bouças <mail@eduardoboucas.com>

* update variable naming

---------

Co-authored-by: Eduardo Bouças <mail@eduardoboucas.com>

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "packages/runtime",
     "packages/static",
     "packages/dev",
+    "packages/ai",
     "packages/nuxt-module",
     "packages/vite-plugin",
     "packages/otel"
