--- a/packages/vite-plugin/package.json
+++ b/packages/vite-plugin/package.json
@@ -41,7 +41,7 @@
   },
   "dependencies": {
     "@netlify/dev": "4.5.10",
-    "@netlify/dev-utils": "^4.1.3",
+    "@netlify/dev-utils": "*",
     "dedent": "^1.7.0"
   },
   "peerDependencies": {
