--- a/packages/otel/package.json
+++ b/packages/otel/package.json
@@ -65,6 +65,20 @@
         "types": "./dist/instrumentations/fetch.d.ts",
         "default": "./dist/instrumentations/fetch.js"
       }
+    },
+    "./opentelemetry": {
+      "require": {
+        "types": "./dist/opentelemetry.d.cts",
+        "default": "./dist/opentelemetry.cjs"
+      },
+      "import": {
+        "types": "./dist/opentelemetry.d.ts",
+        "default": "./dist/opentelemetry.js"
+      },
+      "default": {
+        "types": "./dist/opentelemetry.d.ts",
+        "default": "./dist/opentelemetry.js"
+      }
     }
   },
   "files": [
