chore: Add CODEOWNERS entry for vite-plugin-tanstack-start

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -3,3 +3,4 @@
 /packages/dev-utils/**/* @netlify/ecosystem-pod-frameworks
 /packages/nuxt-module/**/* @netlify/ecosystem-pod-frameworks
 /packages/vite-plugin/**/* @netlify/ecosystem-pod-frameworks
+/‎packages/vite-plugin-tanstack-start/**/* @netlify/ecosystem-pod-frameworks
