--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "packages/blobs",
     "packages/cache",
     "packages/edge-functions",
-    "packages/functions",
+    "packages/functions/prod",
+    "packages/functions/dev",
     "packages/headers",
     "packages/images",
     "packages/redirects",
