chore: release please config

--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -5,7 +5,8 @@
   "packages/dev": "4.6.0",
   "packages/dev-utils": "4.3.0",
   "packages/edge-functions": "2.19.0",
-  "packages/functions": "4.3.0",
+  "packages/functions/prod": "4.3.0",
+  "packages/functions/dev": "0.0.0",
   "packages/headers": "2.1.0",
   "packages/images": "1.3.0",
   "packages/nuxt-module": "0.2.0",
