--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json",
   "bootstrap-sha": "1e628be35d2ae079b63ec8e98ca0c6831237b677",
-  "last-release-sha": "1e628be35d2ae079b63ec8e98ca0c6831237b677",
+  "last-release-sha": "ef34aade3b10abee4a330545c8f1ca7c4d084891",
   "plugins": ["node-workspace"],
   "release-type": "node",
   "separate-pull-requests": false,
@@ -12,7 +12,8 @@
     "packages/dev": {},
     "packages/dev-utils": {},
     "packages/edge-functions": {},
-    "packages/functions": {},
+    "packages/functions/dev": {},
+    "packages/functions/prod": {},
     "packages/headers": {},
     "packages/images": {},
     "packages/nuxt-module": {},
