chore: fix formatting

--- a/.github/workflows/release-please.yaml
+++ b/.github/workflows/release-please.yaml
@@ -119,8 +119,8 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
       - if:
-          ${{ steps.release.outputs['packages/functions/prod--release_created'] || github.event_name == 'workflow_dispatch'
-          }}
+          ${{ steps.release.outputs['packages/functions/prod--release_created'] || github.event_name ==
+          'workflow_dispatch' }}
         run: |
           if [[ "${{ github.event_name }}" == "workflow_dispatch" ]]; then
             npm publish packages/functions/prod/ --provenance --access=public || true
@@ -130,8 +130,8 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
       - if:
-          ${{ steps.release.outputs['packages/functions/dev--release_created'] || github.event_name == 'workflow_dispatch'
-          }}
+          ${{ steps.release.outputs['packages/functions/dev--release_created'] || github.event_name ==
+          'workflow_dispatch' }}
         run: |
           if [[ "${{ github.event_name }}" == "workflow_dispatch" ]]; then
             npm publish packages/functions/dev/ --provenance --access=public || true
@@ -139,7 +139,7 @@ jobs:
             npm publish packages/functions/dev/ --provenance --access=public
           fi
         env:
-          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}          
+          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
       - if:
           ${{ steps.release.outputs['packages/headers--release_created'] || github.event_name == 'workflow_dispatch' }}
         run: |
