--- a/packages/functions/prod/package.json
+++ b/packages/functions/prod/package.json
@@ -14,12 +14,6 @@
         "default": "./dist/main.js"
       }
     },
-    "./dev": {
-      "import": {
-        "types": "./dist-dev/main.d.ts",
-        "default": "./dist-dev/main.js"
-      }
-    },
     "./internal": {
       "require": {
         "types": "./dist/internal.d.cts",
@@ -40,12 +34,6 @@
     "dist/**/*.d.ts",
     "dist/**/*.d.cts",
     "dist/**/*.d.mts",
-    "dist-dev/**/*.js",
-    "dist-dev/**/*.cjs",
-    "dist-dev/**/*.mjs",
-    "dist-dev/**/*.d.ts",
-    "dist-dev/**/*.d.cts",
-    "dist-dev/**/*.d.mts",
     "internal.d.ts"
   ],
   "scripts": {
@@ -80,22 +68,9 @@
     "test": "test"
   },
   "dependencies": {
-    "@netlify/blobs": "10.1.0",
-    "@netlify/dev-utils": "4.3.0",
-    "@netlify/types": "2.1.0",
-    "@netlify/zip-it-and-ship-it": "^14.1.3",
-    "cron-parser": "^4.9.0",
-    "decache": "^4.6.2",
-    "extract-zip": "^2.0.1",
-    "is-stream": "^4.0.1",
-    "jwt-decode": "^4.0.0",
-    "lambda-local": "^2.2.0",
-    "read-package-up": "^11.0.0",
-    "source-map-support": "^0.5.21"
+    "@netlify/types": "2.1.0"
   },
   "devDependencies": {
-    "@types/semver": "^7.5.8",
-    "@types/source-map-support": "^0.5.10",
     "npm-run-all2": "^5.0.0",
     "semver": "^7.6.3",
     "tsd": "^0.32.0",
