--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -4,7 +4,8 @@
   "packages/cache": "3.3.0",
   "packages/dev": "4.6.2",
   "packages/dev-utils": "4.3.0",
-  "packages/edge-functions": "2.19.0",
+  "packages/edge-functions/dev": "0.0.0",
+  "packages/edge-functions/prod": "2.19.0",
   "packages/functions/prod": "5.0.0",
   "packages/functions/dev": "1.0.0",
   "packages/headers": "2.1.0",
