--- a/release-please-config.json
+++ b/release-please-config.json
@@ -11,7 +11,8 @@
     "packages/cache": {},
     "packages/dev": {},
     "packages/dev-utils": {},
-    "packages/edge-functions": {},
+    "packages/edge-functions/dev": {},
+    "packages/edge-functions/prod": {},
     "packages/functions/dev": {},
     "packages/functions/prod": {},
     "packages/headers": {},
