--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "packages/runtime-utils",
     "packages/blobs",
     "packages/cache",
-    "packages/edge-functions",
+    "packages/edge-functions/prod",
+    "packages/edge-functions/dev",
     "packages/functions/prod",
     "packages/functions/dev",
     "packages/headers",
