test: add header instrumentation test

--- a/packages/otel/package.json
+++ b/packages/otel/package.json
@@ -125,6 +125,7 @@
   },
   "author": "Netlify Inc.",
   "devDependencies": {
+    "@netlify/dev-utils": "^4.3.3",
     "msw": "^2.10.5",
     "npm-run-all2": "^7.0.2",
     "tsup": "^8.0.0",
