--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "packages/otel",
     "packages/blobs",
     "packages/cache",
+    "packages/db/dev",
+    "packages/db/prod",
     "packages/edge-functions/prod",
     "packages/edge-functions/dev",
     "packages/functions/prod",
