--- a/.github/workflows/release-please.yaml
+++ b/.github/workflows/release-please.yaml
@@ -261,8 +261,7 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
       - if:
-          ${{ steps.release.outputs['packages/db/prod--release_created'] || github.event_name ==
-          'workflow_dispatch' }}
+          ${{ steps.release.outputs['packages/db/prod--release_created'] || github.event_name == 'workflow_dispatch' }}
         run: |
           if [[ "${{ github.event_name }}" == "workflow_dispatch" ]]; then
             npm publish packages/db/prod/ --provenance --access=public || true
@@ -271,9 +270,7 @@ jobs:
           fi
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
-      - if:
-          ${{ steps.release.outputs['packages/db/dev--release_created'] || github.event_name ==
-          'workflow_dispatch' }}
+      - if: ${{ steps.release.outputs['packages/db/dev--release_created'] || github.event_name == 'workflow_dispatch' }}
         run: |
           if [[ "${{ github.event_name }}" == "workflow_dispatch" ]]; then
             npm publish packages/db/dev/ --provenance --access=public || true
