feat: add `db` package (#581)
* chore: add sync workflow

* feat: add `db` package

* chore: fix linting issues

* chore: clean up comments

* refactor: simplify things

* refactor: simplify imports

* chore: remove comment

* chore: update comment

* refactor: log db errors

* refactor: use waddler

* feat: add Drizzle export

* chore: update version

* refactor: remove drizzle export

* chore: revert changes

* refactor: add opt-in env var

* chore: re-add Renovate file

* fix: fix lock file

* chore: update engine

* chore: add publish flow

* chore: update version

* chore: format

* chore: increase test timeout

---------

Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>

--- a/.github/workflows/release-please.yaml
+++ b/.github/workflows/release-please.yaml
@@ -260,3 +260,22 @@ jobs:
           fi
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+      - if:
+          ${{ steps.release.outputs['packages/db/prod--release_created'] || github.event_name == 'workflow_dispatch' }}
+        run: |
+          if [[ "${{ github.event_name }}" == "workflow_dispatch" ]]; then
+            npm publish packages/db/prod/ --provenance --access=public || true
+          else
+            npm publish packages/db/prod/ --provenance --access=public
+          fi
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+      - if: ${{ steps.release.outputs['packages/db/dev--release_created'] || github.event_name == 'workflow_dispatch' }}
+        run: |
+          if [[ "${{ github.event_name }}" == "workflow_dispatch" ]]; then
+            npm publish packages/db/dev/ --provenance --access=public || true
+          else
+            npm publish packages/db/dev/ --provenance --access=public
+          fi
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
